JEKT-1783 - Update Taishan with nonProd Filter 🔁 Modified        - SAP_01_MD_SLS_ORDR_LINE_TAI        - SAP_01_MD_SLS_ORDR_LINE_MBP        - SAP_01_MD_SLS_ORDR_LINE_bwi

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -492,6 +492,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_3_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_4
     type: string
     nullable: true
@@ -1703,13 +1710,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: RISK_RLVNT_SLS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: TAX_CD_AUTMT_DTRMN
     type: string
     nullable: true
@@ -1738,13 +1738,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: GLOBL_ITM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: RTG_NUM_OPS_ORDR_AUFPL_OLC
     type: string
     nullable: true
@@ -1754,62 +1747,6 @@ schema:
       tags: []
   - name: INTRNL_CNTR_APLZL_OLC
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COST_CTR_SOPROMET_KOSTL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RESV
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FL_NO_SHIPPING
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: POS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MYMEDISET_FL_LN_FEE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRAY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MONIT_REC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EQMNT_RSDL_VAL
-    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -1857,13 +1794,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BGT_PER
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: IUID_RLVNT_CUST
     type: string
     nullable: true
@@ -1892,55 +1822,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: TRSRY_ACCT_SYM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BUSN_EV_TYPE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MOD_ALLW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNCL_ALLW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LIST_RSPCT_PMT_METHDS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BUSN_PTNR_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RPTG_FREQ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: TRAD_PTNR_BUSN_AREA
     type: string
     nullable: true
@@ -1962,27 +1843,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: NUM_OF_RESV_DEPN_RQR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM_RESV_DEPN_RQR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CLM_ITM_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: PRC_AND_EXCH_RT_DTTM
     type: timestamp
     nullable: true
@@ -1990,57 +1850,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: REQ_SGMNT
+  - name: MATL_GRP_4_DESC
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LOC_PHY_HANDOVR_GOODS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HANDOVR_LOC_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: US_FED_GOVT_FLD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EQUIP_RSDL_VAL
-    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
