JEKT-1783 Add Filter for nonProd 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_BBL        - SAP_01_MD_SLS_ORDR_LINE_bbn        - SAP_01_MD_SLS_ORDR_LINE_bba        - SAP_01_MD_SLS_ORDR_LINE_bwi     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -464,6 +464,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_1_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_2_MVGR2
     type: string
     nullable: true
@@ -471,7 +478,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_2_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_3_DESC
     type: string
     nullable: true
     metadata:
@@ -492,6 +513,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_5_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: ORDR_NUM
     type: string
     nullable: true
@@ -501,6 +529,62 @@ schema:
       tags: []
   - name: COND_PRC_UNIT
     type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LD_TIME_WRK_HRS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_PACK_TIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRK_TIMES
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_FCTRY_CAL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LD_TIME_WRK_DAYS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_PACK_TIME_WRK_DAYS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_CTRY
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -731,6 +815,27 @@ schema:
       mappings: []
       tags: []
   - name: REF_ITM_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DTRMN_PICK_PACK_TIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CTRY_CD
     type: string
     nullable: true
     metadata:
@@ -1661,6 +1766,62 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: COST_CTR_SOPROMET_KOSTL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RESV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FL_NO_SHIPPING
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: POS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MYMEDISET_FL_LN_FEE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRAY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MONIT_REC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EQMNT_RSDL_VAL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: RGLT_IN
     type: string
     nullable: true
@@ -1885,139 +2046,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SESS_REC_CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMMDTY_CD_POL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTD_KEY_ANNEX_PKG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN_YR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSHN_CLCT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSHN_THEME
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COND_REC_NUM_SEASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN_DTRMN_REF_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNCL_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PSM_PFM_SPLT_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VAS_RLVNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM_SD_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRX_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_GRP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VAS_DTRMN_REF_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GRID_COND_REC_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HI_LVL_ITM_PRTL_QTY_REJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _l0_upt_
     type: timestamp
     nullable: true
@@ -2053,13 +2081,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _l1_upt_
     type: timestamp
     nullable: false
@@ -2069,6 +2090,13 @@ schema:
       tags: []
   - name: _deleted_
     type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DAI_UPDT_DTTM
+    type: timestamp
     nullable: false
     metadata:
       description: ''
