--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,10 +1979,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-09 23:11:42'
-    modifiedAt: '2023-05-09 23:11:46'
+    modifiedAt: '2023-05-10 03:08:25'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_01_AFPO
+      - datasets/DS_SAP_01_AUFK
+      outputs:
+      - datasets/MD_MFG_ORDER_ITM
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2981,7 +2984,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-10 03:08:25'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6741,6 +6744,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-05 18:43:35'
         modifiedAt: '2023-04-05 18:43:35'
+  datasets/DS_SAP_01_AUFK:
+    name: DS_SAP_01_AUFK
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-09 23:18:47'
+    modifiedAt: '2023-05-10 03:07:18'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-09 23:18:47'
+        modifiedAt: '2023-05-09 23:18:47'
+  datasets/DS_SAP_01_AFPO:
+    name: DS_SAP_01_AFPO
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-09 23:20:01'
+    modifiedAt: '2023-05-10 03:07:02'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-09 23:20:01'
+        modifiedAt: '2023-05-09 23:20:01'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
