--- a/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
@@ -100,13 +100,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SHIP_TO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: CRT_DTTM
     type: timestamp
     nullable: true
@@ -422,20 +415,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PSTNG_BILL_STS_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INVC_LIST_STS_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: CUST_PRC_GRP
     type: string
     nullable: true
@@ -507,6 +486,20 @@ schema:
       mappings: []
       tags: []
   - name: TAX_CLSN_9
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INDSTR_CD_1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INDSTR_CD_2
     type: string
     nullable: true
     metadata:
