JEKT-1783 Update Compute settings for cluster 🔁 Modified     - Job        - JOB_MD_BILL_DOC_HDR        - JOB_MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7814,7 +7814,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Compute_Medium
     scheduleCron: 0 0 0 1/1 * ? *
     timeout: null
     alerting:
@@ -7833,7 +7833,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-03-30 17:13:45'
-    modifiedAt: '2023-05-08 18:28:36'
+    modifiedAt: '2023-05-10 03:54:42'
     author: hgermi1@its.jnj.com
   jobs/JOB_MD_DELV_LINE_HM2:
     name: JOB_MD_DELV_LINE_HM2
@@ -8220,7 +8220,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Compute_Medium
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -8250,7 +8250,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-19 13:29:27'
-    modifiedAt: '2023-05-08 18:38:45'
+    modifiedAt: '2023-05-10 03:54:48'
     author: smille29@its.jnj.com
 functions:
   author: null
