JEKT-1726 Created new source gems that should be setup with Named Config i.e. _NC ❇️ New     - Dataset        - DS_JDE_01_F41021_NC        - DS_JDE_01_F4101_NC
🔁 Modified
    - Pipeline
       - MD_MATL_VALUT_JDE
    - Dataset
       - DS_JDE_01_F4105_NC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1996,10 +1996,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-09 12:49:52'
-    modifiedAt: '2023-05-09 12:59:59'
+    modifiedAt: '2023-05-10 08:45:08'
     datasets:
       inputs:
-      - datasets/DS_JDE_01_F41021
+      - datasets/DS_JDE_01_F4101_NC
+      - datasets/DS_JDE_01_F41021_NC
       - datasets/DS_JDE_01_F4105
       outputs: []
     subgraphs: []
@@ -6776,11 +6777,11 @@ datasets:
         createdAt: '2023-05-06 09:50:07'
         modifiedAt: '2023-05-06 09:50:07'
   datasets/DS_JDE_01_F4105:
-    name: DS_JDE_01_F4105
+    name: DS_JDE_01_F4105_NC
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-05-09 12:56:32'
-    modifiedAt: '2023-05-09 12:59:59'
+    modifiedAt: '2023-05-10 08:06:48'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6790,6 +6791,36 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-09 12:56:32'
         modifiedAt: '2023-05-09 12:56:32'
+  datasets/DS_JDE_01_F41021_NC:
+    name: DS_JDE_01_F41021_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-10 08:39:41'
+    modifiedAt: '2023-05-10 08:42:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-10 08:39:41'
+        modifiedAt: '2023-05-10 08:39:41'
+  datasets/DS_JDE_01_F4101_NC:
+    name: DS_JDE_01_F4101_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-10 08:45:06'
+    modifiedAt: '2023-05-10 08:45:06'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-10 08:45:06'
+        modifiedAt: '2023-05-10 08:45:06'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
