JEKT-1726 Created Lookup gems and created test dataset to check capabilities of prophecy to push data to a table in DBFS against my user ❇️ New     - Dataset        - TEST_INV_OUT
🔁 Modified
    - Pipeline
       - MD_MATL_VALUT_JDE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1996,13 +1996,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-09 12:49:52'
-    modifiedAt: '2023-05-10 08:54:44'
+    modifiedAt: '2023-05-10 11:40:21'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101_NC
       - datasets/DS_JDE_01_F41021_NC
       - datasets/DS_JDE_01_F4105
-      outputs: []
+      outputs:
+      - datasets/TEST_INV_OUT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -6821,6 +6822,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-10 08:45:06'
         modifiedAt: '2023-05-10 08:45:06'
+  datasets/TEST_INV_OUT:
+    name: TEST_INV_OUT
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-10 10:02:28'
+    modifiedAt: '2023-05-10 10:39:03'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: File
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-10 10:02:28'
+        modifiedAt: '2023-05-10 10:02:28'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
