JEKT-1735 Config created for SAP src_sys 🔁 Modified     - Pipeline        - SAP_01_MD_BTCH     - Dataset        - DS_SAP_01_MCHA        - DS_SAP_01_MCH1

--- a/src/datasets/DS_SAP_01_MCH1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_MCH1/pbt_aspects.yml
@@ -240,21 +240,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_DAT_WE_FERT
+  - name: BATCH_TYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_DAT_WE_BEST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_DAT_WB_BEST
+  - name: SGT_SCAT
     type: string
     nullable: true
     metadata:
