--- a/src/pipelines/SAP_01_MD_BTCH/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_BTCH/pbt_aspects.yml
@@ -1,5 +1,16 @@
 version: 1
 configurations:
-- default
+- GEU
 - MBP
+- BBA
+- BBL
+- HMD
+- P01
+- MRS
+- default
+- HCS
+- HM2
+- BBN
+- TAI
+- BWI
 dependencies: []
