--- a/src/datasets/DS_SAP_01_MCHA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_MCHA/pbt_aspects.yml
@@ -254,6 +254,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BATCH_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SGT_SCAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
