JEKT-1735 JDE Pipeline started (initial config and dev) ❇️ New     - Dataset        - DS_JDE_01_F4108     - Pipeline        - JDE_01_MD_BTCH

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1988,6 +1988,21 @@ pipelines:
       - datasets/MD_BTCH
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_01_MD_BTCH:
+    name: JDE_01_MD_BTCH
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-10 14:58:43'
+    modifiedAt: '2023-05-10 15:38:06'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F4108
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -6774,6 +6789,21 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-05-08 18:02:43'
         modifiedAt: '2023-05-08 18:02:43'
+  datasets/DS_JDE_01_F4108:
+    name: DS_JDE_01_F4108
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-10 15:05:34'
+    modifiedAt: '2023-05-10 15:05:34'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-10 15:05:34'
+        modifiedAt: '2023-05-10 15:05:34'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
