JEKT-1735 Added spark expressions to JDE config (CRT_DTTM & AVAIL_DTTM) 🔁 Modified     - Pipeline        - JDE_01_MD_BTCH     - Dataset        - MD_BTCH

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1996,11 +1996,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-10 14:58:43'
-    modifiedAt: '2023-05-10 15:56:48'
+    modifiedAt: '2023-05-10 19:01:34'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4108
-      outputs: []
+      outputs:
+      - datasets/MD_BTCH
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3059,7 +3060,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-10 12:08:17'
+    modifiedAt: '2023-05-10 17:34:52'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
