JEKT-1735 Config created for GMD, BW2, DEU & DJD 🔁 Modified     - Pipeline        - JDE_01_MD_BTCH     - Dataset        - DS_JDE_01_F4108

--- a/src/datasets/DS_JDE_01_F4108/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F4108/pbt_aspects.yml
@@ -16,14 +16,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: IOITM
+  - name: IOLOTN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IOLOTN
+  - name: IOITM
     type: string
     nullable: true
     metadata:
@@ -205,6 +205,41 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: IOUSER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOUPMJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOTDAY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOJOBN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: IOLRP1
     type: string
     nullable: true
@@ -296,35 +331,105 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: IOUSER
+  - name: IOBBDJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IOPID
+  - name: IOBODJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IOUPMJ
+  - name: IODLEJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IOTDAY
+  - name: IOOHDJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IOJOBN
+  - name: IOSBDJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOU1DJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOU2DJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOU3DJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOU4DJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOU5DJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOCHDF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOWPDF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IODOC1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOLOTR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOLOTC
     type: string
     nullable: true
     metadata:
